# sing-attune

./: .env.example  .gitignore  .whitesource  AGENTS.md  CLAUDE.md  IMPLEMENTATION.md  LICENSE  NOTICE  README.md  backend-thin.spec  backend.spec  justfile  pyproject.toml
.github/scripts/: claude_review.py  gpt_review.py
.github/workflows/: gpt-pr-review.yml  package-installers.yml  package-on-release.yml  pr-lint.yml  pr-review.yml
backend/: cli.py  main.py  transcription_service.py
backend/audio/: __init__.py  capture.py  music_analysis.py  note_segmentation.py  pipeline.py  pitch.py  pitch_track.py
backend/models/: __init__.py  session.py  transcription.py
backend/music/: __init__.py  musicxml_export.py  notation_policy.py  quantization.py  score_model.py
backend/score/: __init__.py  model.py  parser.py  timeline.py  upload.py
backend/scripts/: benchmark_crepe.py
backend/session/: store.py
backend/tests/: conftest.py  test_api_score_endpoint.py  test_capture.py  test_cors_config.py  test_integration.py  test_main.py  test_music_analysis.py  test_musicxml_export.py  test_notation_policy.py  test_note_segmentation.py  test_pipeline.py  test_pitch.py  test_pitch_track.py  test_quantization.py  test_score.py  test_score_model.py  test_session_api.py  test_transcription_api_cli.py  test_transcription_models.py  test_transcription_validation.py  test_upload.py  test_ws_pitch_integration.py
docs/: integration-test-plan.md  latency-baseline.md  milestone-2-validation.md  soundfont-licensing.md  sync-protocol.md
electron/: electron-builder-thin.yml  electron-builder.yml  main.js  package.json  preload.js  splash.html
electron/assets/: icon.ico.base64
electron/scripts/: preflight-package-win.js
frontend/: electron-builder.yml  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/e2e/: app.spec.ts
frontend/e2e/fixtures/: minimal.mxl  minimal.xml
frontend/electron/: main.js  preload.js
frontend/scripts/: prepackage-win.mjs
frontend/src/: feature-types.ts  main.ts  media-session.test.ts  media-session.ts  part-options.test.ts  part-options.ts  registry.ts  score-analyser.test.ts  score-analyser.ts  settings-shell.test.ts
frontend/src/audio/: devices.test.ts  devices.ts  recorder.test.ts  recorder.ts
frontend/src/pitch/: accuracy.test.ts  accuracy.ts  diagnostics.test.ts  diagnostics.ts  graph-colors.ts  graph.test.ts  graph.ts  interpretation.test.ts  interpretation.ts  note-name.test.ts  note-name.ts  note.test.ts  note.ts  overlay.test.ts  overlay.ts  phrase-summary.test.ts  phrase-summary.ts  pipeline-integration.test.ts  session-range.test.ts  session-range.ts  socket.test.ts  socket.ts  stable-note.test.ts  stable-note.ts  synthetic.test.ts  synthetic.ts  timeline-sync.test.ts  timeline-sync.ts  voice-type.test.ts  voice-type.ts
frontend/src/playback/: engine.test.ts  (+3 more)
issues/: issue-76-implementation-plan.md  issue-77-implementation-plan.md  issue-78-implementation-plan.md  issue-79-implementation-plan.md  issue-80-post-phrase-pitch-accuracy-implementation-plan.md  issue-clash-merged-plan.md  issue-clash-pr-prompts.md
musescore/: One Day More satb_compressed.mxl  One Singular Sensation SAB.xml  homeward_bound-PARTI.mxl  homeward_bound-PART_II.mxl  homeward_bound.mxl
scripts/: install-hooks.sh
(+53 files in other folders)
