[project]
name = "sing-attune-backend"
version = "0.2.0"
description = "sing-attune backend — MusicXML pitch tracking"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
    "music21>=9.1",
    "sounddevice>=0.4.6",
    "numpy>=1.26",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
# Primary pitch engine — PyTorch-based, actively maintained, CUDA-friendly
# Install PyTorch first per https://pytorch.org/get-started/locally/
# then: uv pip install torchcrepe
torchcrepe = [
    "torchcrepe>=0.0.20",
]
# Lightweight CPU fallback (no GPU required)
aubio = [
    "aubio>=0.4.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
