[project]
name = "sing-attune-backend"
version = "0.2.0"
description = "sing-attune backend — MusicXML pitch tracking"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
    "music21>=9.1",
    "sounddevice>=0.4.6",
    "numpy>=1.26",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
    "librosa>=0.11.0",
]


[project.scripts]
sing-attune = "backend.cli:main"

[project.optional-dependencies]
# Pitch engines — install PyTorch first:
#   uv pip install torch torchaudio --index-url https://download.pytorch.org/whl/cu128
# Then:
#   uv pip install torchcrepe
torchcrepe = [
    "torchcrepe>=0.0.20",
]
# torchaudio pYIN (CPU fallback) ships with torchaudio — no separate install needed

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.15.5",
    "pyinstaller>=6.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["backend"]
omit = [
    "backend/tests/*",
    "backend/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "@pytest.mark.hardware",
]
